# np_fingerprint_benchmark

./: Dockerfile  README.md  requirements.txt  requirements_automl.txt  run.sh  setup.cfg
exploratory_analysis/: 3000ftrs.ipynb  MST.ipynb  biosynthetic_distance.ipynb  dist_biossint.py  get_cmat.py
ginestra_dataset/: benchmark.py  evaluate_pipelines.py  explore_chemical_space.ipynb
kegg/: analyse_kegg_data.ipynb  automl_deepmol.py  benchmark.py  benchmark_linear.py  biosynfoni_np_classifier_results.csv  biosynfoni_results.csv  dmpnn_results.csv  get_data_from_kegg.py  kegg_pathways_v1.csv  kegg_pathways_w_inchikey.csv  kegg_pathways_w_labels.csv  kegg_pathways_w_labels_dedup.csv  kegg_pathways_w_labels_v2.csv  kegg_prediction_linear.db  mhfp_results.csv  modern_bert_1_results.csv  morganfp_results.csv  neural_npfp_results.csv  np_bert_2_results.csv  np_classifier_fp_results.csv  prepare_data_for_ml.ipynb  train_models_with_all_data.py
masked_learning/: integration_of_data_masked_learning.ipynb  standardize_datasets.py  train_bert.py  train_deberta.py  train_modern_bert.py  train_np_bert.py  train_roberta.py  vocab.txt
np_classifier/: automl_deepmol.py  automl_fingerprints.py  benchmark.py  create_cross_validation_sets.ipynb  evaluate_pipelines.py  generate_embeddings.ipynb  generate_embeddings.py  np_classifier.db  np_classifier_all.db  np_classifier_biosynfoni.csv  np_classifier_dmpnn.csv  np_classifier_mhfp.csv  np_classifier_modern_bert.csv  np_classifier_morganfp.csv  np_classifier_neural_npfp.csv  np_classifier_np_bert.csv  np_classifier_np_classifier_fp.csv  (+15 more)
(+2076 files in other folders)
