[metadata]
name = pathway_prediction
version = 0.0.1
description = pathway_prediction
long_description = file: README_pypi.md
long_description_content_type = text/markdown
keywords = plants, secondary metabolism
author = Joao Capela
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    =src
packages = find_namespace:
python_requires = >=3.8
zip_safe = False
include_package_data = True
install_requires =
    biopython
    lxml
    BeautifulSoup4
    html5lib
    luigi
    pandas
    networkx
    deepmol[machine-learning]
    retry
    IPython


[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest>=7.1.1
    pytest-cov>=3.0.0
    mypy>=0.942
    flake8>=4.0.1
    tox>=3.25.0

[options.package_data]
plants_sm = py.typed

[flake8]
max-line-length = 160